Fix overlapping footer

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -42,6 +42,7 @@ h2 {
   height: auto !important;
   height: 100%;
   margin: 0 auto -60px;
+  padding-bottom: 80px;
 }
 
 
